# sqlalchemy-pydantic-codegen

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sqlalchemy_pydantic_codegen/: cli.py
src/sqlalchemy_pydantic_codegen/core/: cleaner.py  generator.py
src/sqlalchemy_pydantic_codegen/templates/: model.jinja2
src/sqlalchemy_pydantic_codegen/utils/: type_mapping.py
tests/: test_cleaner.py  test_generator.py  test_model_validators.py
tests/fixtures/: sample_models.py  server_default_models.py
